# DevOps-hazard-modeling

./: .dockerignore  .env.sample  .gitignore  01-pet-process-1km.py  02-gef-chirps-process-1km.py  03-imerg-process-1km.py  04-chirps-gefs-zarr-upload.py  07-upload_to_gcs.py  DEPLOYMENT.md  Dockerfile  GITHUB_SECRETS.md  PREFECT_DEPLOYMENT.md  PRODUCTION-SETUP.md  README.md  SETUP-CHECKLIST.md  commit-with-progress.sh  deploy-local.sh  docker-compose.yml  ftp_to_gcs_sync.py  prefect.yaml  requirements.txt  utils.py
wflow-jl/: .env.example  README.md  REORGANIZATION_PLAN.md  REORGANIZATION_SUMMARY.md  SIMULATION_WORKFLOW.md  WRSI_wflow_presentation.md  download.py  pyproject.toml  region_configs.py  region_configs.py.backup  reorganize_dryrun.sh  reorganize_wflow.sh
wflow-jl/agri-cra/: README.md  continuous-risk-monitoring-agri-advisory.md  evidence-completeness-and-ground-truth.md  gpt55_flight_sim_drm_agri-advisory.md  wflow_hazard_evidence_chain.md  wrsi_bn_integration_plan.md
wflow-jl/agri-cra/asap/: RxInfer_BN_Limitations_Summary.md  agri-cra-pipeline-v2.drawio  (+6 more)
wflow-jl/bdi/: README.md  burundi_sbm.toml
wflow-jl/dji/: README.md
wflow-jl/eri/: README.md  fix_eritrea_staticmaps.py
wflow-jl/eth/: README.md  complete_ethiopia_workflow.sh
wflow-jl/ken/: README.md  complete_kenya_workflow.sh
wflow-jl/mwi/: compute_pet.py  download_s2s_forcing.py
wflow-jl/rwa/: README.md
wflow-jl/sdn/: README.md
wflow-jl/shared/: resample_forcing.py
wflow-jl/som/: README.md
wflow-jl/ssd/: README.md
wflow-jl/tza/: README.md
wflow-jl/uga/: README.md
(+399 files in other folders)
